# QuickMacApp

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  requirements.in  requirements.txt
examples/: MainMenu.nib  MainMenu.xib  eggs-and-milk.py  eggs-and-pw.py  eggs.acorn  menu-and-status.py  notifications.py  toggle-item.py
src/quickmacapp/: __init__.py  _background.py  _interactions.py  _notifications.py  _quickapp.py  notifications.py
